# swift-tui-org

./: .bazelrc  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  RELEASE.md  SQUASH.md  TODO.md  mise.toml  threehosts.asciinema
.github/workflows/: org-gate.yml
applets/render-pipeline/: README.md  app.js  index.html  styles.css
docs/: CROSS-REPO-DEVELOPMENT.md  PUBLIC-REPO-READINESS.md  README.md
docs/perf/: README.md
docs/plans/: 2026-05-22-001-github-organization-split-plan.md  2026-05-24-001-wasi-worker-scheduler-plan.md  2026-05-24-002-raster-damage-support-plan.md  2026-05-24-003-file-previewer-performance-plan.md  2026-05-25-001-shared-surface-damage-contract-plan.md  2026-05-26-001-standalone-submodule-builds-plan.md  2026-05-26-002-examples-coverage-opportunities-todo.md  2026-05-27-001-swifttui-app-command-conformance-plan.md  2026-05-27-002-marketing-improvements-plan.md  2026-05-27-003-wasi-rendering-performance-plan.md  2026-05-28-001-profiling-product.md  2026-05-28-002-gallery-performance-data-collection-plan.md  2026-05-28-003-local-perf-measurement-hardening-design.md  2026-05-28-004-perf-g2-run-to-run-variance-plan.md  2026-05-29-001-perf-g4-memory-signal-plan.md  2026-05-29-002-perf-g1-reproducible-baseline-plan.md  2026-05-29-003-perf-h1-offscreen-frame-elision-design.md  2026-05-29-004-perf-h1-offscreen-frame-elision-plan.md  2026-05-30-001-perf-h2-resolve-reuse-complete-plan.md  2026-05-30-002-perf-h3-retained-subtree-bookkeeping-plan.md  2026-05-30-003-perf-commit-ms-instrumentation-plan.md  2026-05-31-001-perf-commit-ms-registration-restore-fix-plan.md  2026-06-02-001-rendering-performance-optimization-proposal.md  2026-06-02-002-rendering-performance-next-wave-proposal.md  2026-06-02-003-rendering-performance-remaining-opportunities-proposal.md  2026-06-02-004-persistent-retained-index-structural-adjacency-proposal.md  2026-06-03-001-first-class-structural-identity-proposal.md  2026-06-03-002-structural-identity-stage-0-divergence-diagnostics-plan.md  2026-06-03-003-structural-identity-stage-2-resolve-time-structural-identity-plan.md  2026-06-03-004-structural-identity-stage-3-reconciliation-entity-identity-plan.md  2026-06-03-005-structural-identity-stage-4-portal-overlay-edge-roles-plan.md  2026-06-03-006-structural-identity-stage-5-viewnodeid-lifetime-split-plan.md  2026-06-03-007-structural-identity-stage-6-entity-routed-lifetime-plan.md  2026-06-03-008-structural-identity-migration-gap-remediation-plan.md  2026-06-05-001-shape-first-class-custom-paths-plan.md  2026-06-06-001-image-blend-mode-implementation-plan.md  2026-06-06-002-image-blend-mode-cache-hardening-plan.md  2026-06-06-003-image-blend-mode-glyph-backdrop-plan.md  2026-06-06-004-image-blend-mode-ordered-layer-plan.md  2026-06-06-005-image-blend-mode-gif-blending-plan.md  (+25 more)
docs/proposals/: 2026-06-13-001-bug-b-toolbar-strip-reuse-proposal.md  2026-06-14-001-android-host-library-extraction-proposal.md  2026-06-20-001-scroll-momentum-fling-architecture.md  2026-06-25-001-deferred-context-abstraction-refactor.md  2026-06-26-001-architecture-fragility-improvements-proposal.md  2026-06-26-002-pipeline-ir-encapsulation-proposal.md  2026-06-29-001-focus-model-reassessment.md  COMMAND_PALETTE_OPEN_PERFORMANCE.md  EMBEDDED_WEB_SCROLL_CHAINING.md  IMAGE_BLEND_MODE.md
docs/reports/: 2026-05-28-gallery-performance-report.md  2026-05-30-commit-ms-breakdown-findings.md  2026-05-30-flake-bcd-investigation.md  2026-05-30-h2-resolve-reuse-findings.md  2026-05-30-h3-retained-subtree-findings.md  2026-05-31-commit-ms-registration-restore-fix-results.md  2026-05-31-place-ms-identical-subtree-sync-skip-results.md  2026-06-04-resolve-ms-win-ii-and-g3a-deferral-measurement.md  2026-06-06-geometryreader-autonomous-animation-bug.md  2026-06-06-hstack-trailing-control-hit-region-bug.md  2026-06-08-0.1.0-public-release-readiness.md  2026-06-09-android-host-current-state.md  2026-06-09-lever-b-implementation-and-findings.md  2026-06-09-sheet-open-latency-investigation.md  2026-06-11-resolve-ms-regression-bisect.md  2026-06-11-resolve-stamp-skip-results.md  2026-06-12-gallery-physics-task-start-triage.md  2026-06-12-gallery-tab-crash-stamp-skip-regression.md  2026-06-12-next-wave-completion.md  2026-06-12-part0-divergent-identity-orphaning-fix.md  2026-06-13-bug-a-scoped-publication-task-drop-fix.md  2026-06-13-swifttui-invalidation-gap-analysis.md  2026-06-13-swiftui-observation-invalidation-mechanics.md  2026-06-14-stage-0-frontier-publication-inventory.md  2026-06-15-gallery-example-invariant-map.md  2026-06-15-item-e-frontier-design-and-reframing.md  2026-06-15-items-b-c-sizing-and-pivot-to-e.md  2026-06-15-perf-phase-rebaseline.md  2026-06-15-reuse-trace-productization-and-cone-confirmation.md  2026-06-15-sheet-open-cone-followup-fix-results.md  2026-06-15-sheet-open-cone-mechanism-2-portal-translation-fix.md  2026-06-15-sheet-open-cone-source-portal-not-focus.md  2026-06-15-stage-1a-frontier-publication-narrowing.md  2026-06-15-stage-1a2-selective-gate-attribution.md  2026-06-15-stage-1b-all-publication-diffing.md  2026-06-15-stage-2-applied-mutation-delta-checkpoint-design.md  2026-06-15-stage-2-checkpoint-scope-probe.md  2026-06-15-stage-2a-shadow-delta-checkpoint-tracker.md  2026-06-15-stage-2b-guarded-delta-checkpoint-restore.md  2026-06-15-stage-2c-checkpoint-create-finding.md  (+29 more)
logos/: swifttui.pxd
todos/: render-pipeline-docc-consolidation.md
tools/bazel/: check_org_ci_workflow.sh  check_public_dependency_contracts.sh  child_ci_status.sh  pin_cleanliness.sh  release_artifact_contract.sh  release_artifact_contract_fixture_test.sh  release_pin_contract.sh  repo_registry_contract.sh  submodule_status.sh  version_coherence.sh
tools/coordination/: bump_version.sh  materialize_pretag_overlay.sh  open_overlay.sh  open_overlay_smoke_test.sh  run_examples_pretag_gate.sh  run_site_pretag_gate.sh  swift-tui-android-dev.init.gradle.kts
tools/layout-diff/: README.md  diff.py  pixel_compare.py  run.sh
tools/registry/: generate.py  repos.generated.sh  repos.json
(+19 files in other folders)
