load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

sh_test(
    name = "org_ci_workflow",
    srcs = ["tools/bazel/check_org_ci_workflow.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "submodule_status",
    srcs = ["tools/bazel/submodule_status.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "repo_registry_contract",
    srcs = ["tools/bazel/repo_registry_contract.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "pin_cleanliness",
    srcs = ["tools/bazel/pin_cleanliness.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "release_pin_contract",
    srcs = ["tools/bazel/release_pin_contract.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "public_dependency_contracts",
    srcs = ["tools/bazel/check_public_dependency_contracts.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "examples_pretag_native_gate",
    srcs = ["tools/coordination/run_examples_pretag_gate.sh"],
    data = ["tools/coordination/materialize_pretag_overlay.sh"],
    tags = [
        "exclusive",
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "site_pretag_native_gate",
    srcs = ["tools/coordination/run_site_pretag_gate.sh"],
    data = ["tools/coordination/materialize_pretag_overlay.sh"],
    tags = [
        "exclusive",
        "local",
        "no-sandbox",
    ],
)

test_suite(
    name = "swift_tui_native_gate",
    tests = ["@swift_tui//:native_gate"],
)

test_suite(
    name = "swift_tui_web_native_gate",
    tests = ["@swift_tui_web//:native_gate"],
)

test_suite(
    name = "swift_tui_examples_native_gate",
    tests = ["@swift_tui_examples//:native_gate"],
)

test_suite(
    name = "swift_tui_site_native_gate",
    tests = ["@swift_tui_site//:native_gate"],
)

test_suite(
    name = "native_gates",
    tests = [
        ":swift_tui_native_gate",
        ":swift_tui_web_native_gate",
        ":swift_tui_examples_native_gate",
        ":swift_tui_site_native_gate",
    ],
)

test_suite(
    name = "org_fast",
    tests = [
        ":org_ci_workflow",
        ":pin_cleanliness",
        ":repo_registry_contract",
        ":submodule_status",
    ],
)

test_suite(
    name = "org_full",
    tests = [
        ":examples_pretag_native_gate",
        ":native_gates",
        ":org_fast",
        ":site_pretag_native_gate",
    ],
)

test_suite(
    name = "release_candidate",
    tests = [
        ":org_full",
        ":release_pin_contract",
    ],
)

test_suite(
    name = "org",
    tests = [
        ":org_full",
    ],
)
