load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

# `bazel run`-able developer entry points.
#
# Prefer these over invoking the scripts directly: Bazel exports
# $BUILD_WORKSPACE_DIRECTORY so the scripts locate the workspace correctly no
# matter where `bazel run` is invoked from.

sh_binary(
    name = "open_overlay",
    srcs = ["tools/coordination/open_overlay.sh"],
    data = ["tools/coordination/materialize_pretag_overlay.sh"],
)

sh_binary(
    name = "materialize_pretag_overlay",
    srcs = ["tools/coordination/materialize_pretag_overlay.sh"],
)

# Org-wide version bump helper. `bazel run //:bump_version -- <new-version>`
# previews the rewrite; append --write to apply. See mise task `bump`.
sh_binary(
    name = "bump_version",
    srcs = ["tools/coordination/bump_version.sh"],
)

sh_test(
    name = "submodule_status",
    srcs = ["tools/bazel/submodule_status.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "repo_registry_contract",
    srcs = ["tools/bazel/repo_registry_contract.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "pin_cleanliness",
    srcs = ["tools/bazel/pin_cleanliness.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "release_pin_contract",
    srcs = ["tools/bazel/release_pin_contract.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "version_coherence",
    srcs = ["tools/bazel/version_coherence.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "release_artifact_contract",
    srcs = ["tools/bazel/release_artifact_contract.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "release_artifact_contract_fixture",
    srcs = ["tools/bazel/release_artifact_contract_fixture_test.sh"],
    data = ["tools/bazel/release_artifact_contract.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "public_dependency_contracts",
    srcs = ["tools/bazel/check_public_dependency_contracts.sh"],
    tags = [
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "examples_pretag_native_gate",
    srcs = ["tools/coordination/run_examples_pretag_gate.sh"],
    data = ["tools/coordination/materialize_pretag_overlay.sh"],
    tags = [
        "exclusive",
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "site_pretag_native_gate",
    srcs = ["tools/coordination/run_site_pretag_gate.sh"],
    data = ["tools/coordination/materialize_pretag_overlay.sh"],
    tags = [
        "exclusive",
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "examples_worktree_gate",
    srcs = ["tools/coordination/run_examples_pretag_gate.sh"],
    data = ["tools/coordination/materialize_pretag_overlay.sh"],
    env = {"SWIFTTUI_ORG_OVERLAY_SOURCE_MODE": "worktree"},
    tags = [
        "exclusive",
        "local",
        "no-sandbox",
    ],
)

sh_test(
    name = "site_worktree_gate",
    srcs = ["tools/coordination/run_site_pretag_gate.sh"],
    data = ["tools/coordination/materialize_pretag_overlay.sh"],
    env = {"SWIFTTUI_ORG_OVERLAY_SOURCE_MODE": "worktree"},
    tags = [
        "exclusive",
        "local",
        "no-sandbox",
    ],
)

# Cheap script-level smoke test for the overlay tooling. Does not invoke
# SwiftPM or Bun, so it catches materializer / open_overlay regressions in
# seconds rather than the multi-minute native gates. Tagged `exclusive`
# because it places a temporary marker file in swift-tui/ to exercise the
# worktree-mode copy path, and pin_cleanliness would fail if it raced.
sh_test(
    name = "open_overlay_smoke",
    srcs = ["tools/coordination/open_overlay_smoke_test.sh"],
    data = [
        "tools/coordination/materialize_pretag_overlay.sh",
        "tools/coordination/open_overlay.sh",
    ],
    tags = [
        "exclusive",
        "local",
        "no-sandbox",
    ],
)

# The per-child native_gate wrappers and the native_gates aggregate are GENERATED
# from tools/registry/repos.json by tools/registry/generate.py. Do not hand-edit
# between the markers; run `python3 tools/registry/generate.py --write`.
# >>> GENERATED:native-gates (tools/registry/generate.py)
test_suite(
    name = "swift_tui_native_gate",
    tests = ["@swift_tui//:native_gate"],
)

test_suite(
    name = "swift_tui_swiftui_native_gate",
    tests = ["@swift_tui_swiftui//:native_gate"],
)

test_suite(
    name = "swift_tui_web_native_gate",
    tests = ["@swift_tui_web//:native_gate"],
)

test_suite(
    name = "swift_tui_examples_native_gate",
    tests = ["@swift_tui_examples//:native_gate"],
)

test_suite(
    name = "swift_tui_site_native_gate",
    tests = ["@swift_tui_site//:native_gate"],
)

test_suite(
    name = "swift_tui_android_native_gate",
    tests = ["@swift_tui_android//:native_gate"],
)

test_suite(
    name = "native_gates",
    tests = [
        ":swift_tui_native_gate",
        ":swift_tui_swiftui_native_gate",
        ":swift_tui_web_native_gate",
        ":swift_tui_examples_native_gate",
        ":swift_tui_site_native_gate",
        ":swift_tui_android_native_gate",
    ],
)
# <<< GENERATED:native-gates

test_suite(
    name = "worktree_gates",
    tests = [
        ":examples_worktree_gate",
        ":site_worktree_gate",
    ],
)

test_suite(
    name = "org_fast",
    tests = [
        ":pin_cleanliness",
        ":public_dependency_contracts",
        ":release_artifact_contract_fixture",
        ":repo_registry_contract",
        ":submodule_status",
    ],
)

test_suite(
    name = "org_full",
    tests = [
        ":examples_pretag_native_gate",
        ":native_gates",
        ":org_fast",
        ":site_pretag_native_gate",
    ],
)

test_suite(
    name = "release_candidate",
    tests = [
        ":org_full",
        ":release_artifact_contract",
        ":release_pin_contract",
        ":version_coherence",
    ],
)

test_suite(
    name = "org",
    tests = [
        ":org_full",
    ],
)
