module(
    name = "swift_tui_org",
    version = "0.0.7",
)

bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "swift_tui", version = "0.0.7")
bazel_dep(name = "swift_tui_web", version = "0.0.7")
bazel_dep(name = "swift_tui_examples", version = "0.0.7")
bazel_dep(name = "swift_tui_site", version = "0.0.7")

local_path_override(
    module_name = "swift_tui",
    path = "swift-tui",
)

local_path_override(
    module_name = "swift_tui_web",
    path = "swift-tui-web",
)

local_path_override(
    module_name = "swift_tui_examples",
    path = "swift-tui-examples",
)

local_path_override(
    module_name = "swift_tui_site",
    path = "swift-tui-site",
)
